--- a/index.css
+++ b/index.css
@@ -1,3 +1,41 @@
-#heading{
-    color:blue;
+
+.header{
+    display:flex;
+    justify-content: space-between;
+    border: 1px solid black;
+}
+
+.logo{
+    height:100px;
+}
+.nav-items > ul {
+    display:flex;
+    list-style-type: none;
+    font-size: 20px;
+}
+.nav-items >ul> li{
+    padding:10px;
+    margin:10px;
+}
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap:10px;
+}
+.res-card{
+    width:200px;
+    padding:5px;
+    margin:5px;
+
+}
+.res-card:hover{
+    border:1px solid black;
+    cursor:pointer;
+
+}
+.res-logo{
+    width:100%;
+}
+.search{
+    padding:10px;
 }
