--- a/index.css
+++ b/index.css
@@ -1,72 +1,3 @@
-
-.header{
-    display:flex;
-    justify-content: space-between;
-    border: 1px solid black;
-}
-
-.logo{
-    height:100px;
-}
-.nav-items > ul {
-    display:flex;
-    list-style-type: none;
-    font-size: 20px;
-}
-.nav-items >ul> li{
-    padding:10px;
-    margin:10px;
-}
-.res-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap:10px;
-}
-.res-card{
-    width:200px;
-    padding:5px;
-    margin:5px;
-
-}
-.res-card:hover{
-    border:1px solid black;
-    cursor:pointer;
-
-}
-.res-logo{
-    width:100%;
-}
-.search{
-    padding:10px;
-}
-.shimmer-container{
-    margin-top: 20px;
-    display:flex;
-    flex-wrap: wrap;
-    gap:10px;
-
-}
-
-.shimmer-card{
-    width:200px;
-    height:400px;
-    padding:5px;
-    margin:5px;
-    background-color: #f0f0f0;
-}
-.shimmer-logo{
-    background-color: #f0f0f0;
-    animation:1s;
-
-}
-.shimmer-tag{
-    background-color: #f0f0f0;
-    animation:1s;
-
-
-}
-.user-card{
-    padding:10px;
-    border: 1px solid black;
-}
-
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
